[project]
name = "an-cli"
version = "1.0.0"
description = "Command line tool for calculations involving (some) numeric algorithms (AN)"
requires-python = ">=3.10"
dependencies = [
    "arguably>=1.3.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pyinstrument>=5.0.1",
    "rich>=14.0.0",
    "sympy>=1.13.3",
]
