[project]
name = "an-cli"
version = "1.0.0"
description = "Command line tool for calculations involving (some) numeric algorithms (AN)"
requires-python = ">=3.10"
dependencies = [
    "arguably>=1.3.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "rich>=14.0.0",
    "setuptools>=79.0.0",
    "sympy>=1.13.3",
]

[project.scripts]
an-cli = "an_cli.__main__:main"

[project.optional-dependencies]
testing = [
    "mock>=5.2.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
